src/tests/test-src/errors/E78-alias-hyphen.syntran
// E78: alias-hyphen
// A module alias contains a hyphen

use foo as ba-r;
